test/functions/deitz/test_write_type_error.chpl
var x = 8;
writeln(x.type);
